# narrativelog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  Makefile  README.rst  ReleaseNotes.rst  alembic.ini  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 3bb3cd14b2dd_create_message_table.py  3bb3cd14b2dd_initial_version.py  49ef39173f83_add_components_json_field_to_jira_.py  54f755dbdb6f_add_category_and_time_lost_type_.py  b631d21eb6dc_add_date_end_and_rename_date_user_.py  c5780561f83b_add_columns_systems_subsystems_cscs.py  d9606992ad8d_update_message_table_systems_subsystems_.py
manifests/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
requirements/: dev.in  dev.txt  main.in  main.txt
scripts/: install-base-packages.sh  start-api.sh
src/narrativelog/: __init__.py  create_message_table.py  create_tables.py  log_message_database.py  main.py  message.py  shared_state.py  testutils.py  utils.py
src/narrativelog/routers/: add_message.py  delete_message.py  edit_message.py  find_messages.py  get_configuration.py  get_message.py  get_version.py  normalize_tags.py
tests/: test_add_message.py  test_alembic_migration.py  test_delete_message.py  test_edit_message.py  test_find_messages.py  test_get_configuration.py  test_get_message.py  test_get_root.py  test_normalize_tags.py  test_shared_state.py  test_testutils.py
