[metadata]
name = narrativelog
description = Observatory Wide Logbook.
author = University of Washington
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/lsst-sqre/narrativelog
project_urls =
    Change log = https://github.com/lsst-sqre/narrativelog/master/blob/CHANGELOG.rst
    Source code = https://github.com/lsst-sqre/narrativelog
    Issue tracker = https://github.com/lsst-sqre/narrativelog/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages=find:
python_requires = >=3.10
setup_requires =
    setuptools_scm
# Use requirements/main.in for runtime dependencies instead of install_requires

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    narrativelog = narrativelog.cli:main

[tool:pytest]
# Ignore ndarray size changed warnings (also hide dtype and ufunc warnings because they are common,
# based on https://github.com/numpy/numpy/pull/432).
# I borrowed the technique from astropy:
# https://github.com/astropy/astropy/blob/aed5138bc5d22a89caa956bcdff641673b43dede/setup.cfg#L115-L141
filterwarnings =
    ignore:numpy.dtype size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    ignore:numpy.ufunc size changed:RuntimeWarning

[flake8]
# match black
max-line-length = 88
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
